--- a/index3.html
+++ b/index3.html
@@ -56,7 +56,7 @@
     <ul data-role="listview">
     <li><a href="tel:+661669"><img src="สถาบันการแพทย์.jpg" width="100">สถาบันการแพทย์ฉุนเฉินแห่งชาติ</a></li>
       <li><a href="tel:+66191"><img src="ตำรวจ.jpg" width="100">ติดต่อตำรวจ</a></li>
-      <li><a href="tel:+661182"><img src="กรมอุตุ.gif" width="100">กรมอุตุนิยมวิทยา</a></li>
+      <li><a href="tel:+661182"><img src="" width="100">กรมอุตุนิยมวิทยา</a></li>
       <li><a href="tel:+66192"><img src="ศูนย์เตือนภัย.jpg" width="100">ศูนย์เตือนภัยพิบัติแห่งชาติ</a></li>
       <li><a href="tel:+661784"><img src="การป้องกันและบรเทา.jpg" width="100">กรมป้องกันและบรรเทาสาธารณภัย</a></li>
       <button onClick="myFunction()"><img src="Attention.png" width="100">Earthquake Trembler</button>
