--- a/index3.html
+++ b/index3.html
@@ -56,7 +56,7 @@
       <li><a href="tel:+661182"><img src="กรมอุตุนิยมวิทยา.jpg" width="100">กรมอุตุนิยมวิทยา</a></li>
       <li><a href="tel:+66192"><img src="ศูนย์เตือนภัย.jpg" width="100">ศูนย์เตือนภัยพิบัติแห่งชาติ</a></li>
       <li><a href="tel:+661784"><img src="การป้องกันและบรเทา.jpg" width="100">กรมป้องกันและบรรเทาสาธารณภัย</a></li>
-      <button onClick="myFunction()"><img src="Attention.png" width="100">Earthquake Trembler</button>
+      <button onClick="myFunction()"><img src="" width="100">Earthquake Trembler</button>
     </ul>
 		
   
