--- a/index1.html
+++ b/index1.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>สถิติแผ่นดินไหว(ประเทศไทย)</title>
+<meta http-equiv="refresh" content="5"/>
 <meta http-equiv="Content-Language" content="th"> 
 <meta http-equiv="content-Type" content="text/html; charset=window-874"> 
 <meta http-equiv="content-Type" content="text/html; charset=UTF-8"> 
