--- a/index3.html
+++ b/index3.html
@@ -44,8 +44,8 @@
 </ul>
 </div>
 	</div>
+    <button onClick="myFunction()">Earthquake Trembler</button>
     
-    <button onClick="myFunction()"><img src="" width="100">Earthquake Trembler</button>
 			<div data-role="content" data-theme="a">
 
   
