--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,6 @@
 <html>
 <head>
 <title>สถิติแผ่นดินไหว(ประเทศไทย)</title>
-<meta http-equiv="refresh" content="5"/>
 <meta http-equiv="Content-Language" content="th"> 
 <meta http-equiv="content-Type" content="text/html; charset=window-874"> 
 <meta http-equiv="content-Type" content="text/html; charset=UTF-8"> 
@@ -10,7 +9,16 @@
 <link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
 <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 <script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
-
+<script src="http://maps.google.com/maps/api/js?sensor=false"></script>  
+    <style type="text/css">  
+/*  กำหนด css แสดง แผนที่*/  
+    div#map_canvas{      
+        margin:auto;      
+        width:100%;      
+        height:600px;      
+        overflow:hidden;      
+    }      
+    </style> 
 <script type="text/javascript">
 var map; // กำหนดตัวแปร map ไว้ด้านนอกฟังก์ชัน เพื่อให้สามารถเรียกใช้งาน จากส่วนอื่นได้
 var GGM; // กำหนดตัวแปร GGM ไว้เก็บ google.maps Object จะได้เรียกใช้งานได้ง่ายขึ้น
@@ -70,22 +78,6 @@ $(function(){
 	}).appendTo("body");	
 });
 </script>
-<style type="text/css">
-html { height: 100% }
-body { 
-	height:100%;
-	margin:0;padding:0;
-	font-family:tahoma, "Microsoft Sans Serif", sans-serif, Verdana;
-	font-size:12px;
-}
-/* css กำหนดความกว้าง ความสูงของแผนที่ */
-#map_canvas { 
-	width:1350px;
-	height:550px;
-	margin:auto;
-	margin-top:0px;
-}
-</style>
 </head>
 <body>
 <div data-role="header" data-position="inline">
