--- a/index3.html
+++ b/index3.html
@@ -23,7 +23,7 @@
    var aX = event.accelerationIncludingGravity.x*1;
    var aY = event.accelerationIncludingGravity.y*1;
    var aZ = event.accelerationIncludingGravity.z*1;
-   alert(aX,aY,aZ);
+   alert(aX);
    
 }
 	  }
