--- a/index.html
+++ b/index.html
@@ -10,82 +10,36 @@
 		<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
 		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
-    <script type="text/javascript">
-var map; // กำหนดตัวแปร map ไว้ด้านนอกฟังก์ชัน เพื่อให้สามารถเรียกใช้งาน จากส่วนอื่นได้
-var GGM; // กำหนดตัวแปร GGM ไว้เก็บ google.maps Object จะได้เรียกใช้งานได้ง่ายขึ้น
-function initialize() { // ฟังก์ชันแสดงแผนที่
-	GGM=new Object(google.maps); // เก็บตัวแปร google.maps Object ไว้ในตัวแปร GGM
-	// กำหนดจุดเริ่มต้นของแผนที่
-	var my_Latlng  = new GGM.LatLng(13.761728449950002,100.6527900695800);
-	// กำหนด DOM object ที่จะเอาแผนที่ไปแสดง ที่นี้คือ div id=map_canvas
-	var my_DivObj=$("#map_canvas")[0]; 
-	// กำหนด Option ของแผนที่
-	var myOptions = {
-		zoom: 5, // กำหนดขนาดการ zoom
-		center: my_Latlng , // กำหนดจุดกึ่งกลาง
-		mapTypeId:GGM.MapTypeId.ROADMAP, // กำหนดรูปแบบแผนที่
-		mapTypeControlOptions:{ // การจัดรูปแบบส่วนควบคุมประเภทแผนที่
-			position:GGM.ControlPosition.TOP, // จัดตำแหน่ง
-			style:GGM.MapTypeControlStyle.DROPDOWN_MENU // จัดรูปแบบ style 
-		}
-	};
-	map = new GGM.Map(my_DivObj,myOptions);// สร้างแผนที่และเก็บตัวแปรไว้ในชื่อ map
-	
-	$.ajax({
-		url:"local.xml", // ใช้ ajax ใน jQuery เรียกใช้ไฟล์ xml
-		dataType: "xml",
-		success:function(xml){
-			$(xml).find('marker').each(function(){ // วนลูปดึงค่าข้อมูลมาสร้าง marker
-					var markerID=$(this).attr("id");// นำค่าต่างๆ มาเก็บไว้ในตัวแปรไว้ใช้งาน	
-					var markerName=$(this).find("name").text(); // นำค่าต่างๆ มาเก็บไว้ในตัวแปรไว้ใช้งาน	
-					var markerLat=$(this).find("latitude").text(); // นำค่าต่างๆ มาเก็บไว้ในตัวแปรไว้ใช้งาน	
-					var markerLng=$(this).find("longitude").text();	
-					var markerdate=$(this).find("date").text();
-					var markerrich=$(this).find("Richter").text();	
-					var markerLatLng=new GGM.LatLng(markerLat,markerLng);
-					var my_Marker = new GGM.Marker({ // สร้างตัว marker
-						position:markerLatLng,  // กำหนดไว้ที่เดียวกับจุดกึ่งกลาง
-						map: map, // กำหนดว่า marker นี้ใช้กับแผนที่ชื่อ instance ว่า map
-						title:"   วันเวลา"+markerdate+"    จังหวัด"+markerName+"     ละติจูด "+markerLat+"    ลองติจูด "+markerLng+"     ริกเตอร์"+markerrich // แสดง title เมื่อเอาเมาส์มาอยู่เหนือ
-					});
-					
-				//	console.log($(this).find("id").text());
-			});
-		}	
-	});		
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+    <script>
+function initialize() {
+  var myLatlng = new google.maps.LatLng(49.496675,-102.65625);
+  var mapOptions = {
+    zoom: 12,
+    center: myLatlng
+  }
+
+
+  var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+
+  var georssLayer = new google.maps.KmlLayer({
+    url: 'http://193.52.21.114/service/rss/rss.php?typ=emsc&map_epicenter=true'
+  });
+  georssLayer.setMap(map);
 }
 
-$(function(){
-	// โหลด สคริป google map api เมื่อเว็บโหลดเรียบร้อยแล้ว
-	// ค่าตัวแปร ที่ส่งไปในไฟล์ google map api
-	// v=3.2&sensor=false&language=th&callback=initialize
-	//	v เวอร์ชัน่ 3.2
-	//	sensor กำหนดให้สามารถแสดงตำแหน่งทำเปิดแผนที่อยู่ได้ เหมาะสำหรับมือถือ ปกติใช้ false
-	//	language ภาษา th ,en เป็นต้น
-	//	callback ให้เรียกใช้ฟังก์ชันแสดง แผนที่ initialize
-	$("<script/>", {
-	  "type": "text/javascript",
-	  src: "http://maps.google.com/maps/api/js?v=3.2&sensor=false&language=th&callback=initialize"
-	}).appendTo("body");	
-});
-</script>
-<style type="text/css">
-html { height: 100% }
-body { 
-	height:100%;
-	margin:0;padding:0;
-	font-family:tahoma, "Microsoft Sans Serif", sans-serif, Verdana;
-	font-size:12px;
-}
-/* css กำหนดความกว้าง ความสูงของแผนที่ */
-#map_canvas { 
-	width:1350px;
-	height:550px;
-	margin:auto;
-	margin-top:0px;
-}
-</style>
-    
+google.maps.event.addDomListener(window, 'load', initialize);
+
+    </script>
+        <style>
+     html, body, #map-canvas {
+        height: 100%;
+        margin: auto;
+        padding: 0px
+		width: 1350px;  
+    height: 550px;  
+      }
+    </style>
 	</head>
 	<body>
 		
